k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: linksmlm.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: portfolio-api
            port:
              number: 80
      - path: /health
        pathType: Prefix  
        backend:
          service:
            name: portfolio-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-ui
            port:
              number: 80
